Fixed the Deception Logo on Demo page and fixed the wrong position of Youtube Subscribe Button

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1107,7 +1107,6 @@ figure {
   margin: 0;
 }
 img {
-  vertical-align: middle;
 }
 .img-responsive,
 .thumbnail > img,
