--- a/css/style.css
+++ b/css/style.css
@@ -306,3 +306,7 @@ user agent stylesheetp {
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
 }
+
+#deception-logo{
+	margin-left: 25px;
+}
